--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 1pl6 - released 2012-08-19
+cmb     added $encoding argument to htmlspecialchars() calls
+
 Version 1pl5 - released 2012-02-22
 cmb	changed save routine to skip writing of head()
 
