--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 Version 1pl6 - released 2012-08-19
 cmb     added $encoding argument to htmlspecialchars() calls
 cmb     fixed potential problems with calls to ucfirst() by using Utf8_XH
+cmb     removed superfluous rfc() in pagemanager_save()
 
 Version 1pl5 - released 2012-02-22
 cmb	changed save routine to skip writing of head()
