--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 Version 1pl7 - released 2012-09-20
 cmb     removed javascript: pseudo protocoll
+cmb     fixed typo in English language file
 
 Version 1pl6 - released 2012-08-20
 cmb     added $encoding argument to htmlspecialchars() calls
