--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 1pl9 - released 2012-12-22
+cmb     fixed broken links
+
 Version 1pl8 - released 2012-09-23
 cmb     updated Czech translation and added Czech README and manual (contributed by oldnema)
 
