--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version 1pl12 - released 2013-05-16
+cmb     fixed bug, where a dollar sign or a backslash immediately followed by a digit in a page heading was not properly handled
+cmb     fixed improper language declaration in help files
+
 Version 1pl11 - released 2013-01-05
 cmb     updated to jsTree 1.0 rc3
 cmb     extended copyright to 2013
