--- a/README
+++ b/README
@@ -12,11 +12,11 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
-along with this program (see license.txt).
+along with this program (see LICENSE).
 
 For further information see help/help.htm.
 
 Christoph M. Becker
 Präsident-Mohr-Straße 21
 55218 Ingelheim
-mailto: cmbecker69@gmx.de
+mailto:cmbecker69@gmx.de
