--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,10 @@
-Version 2.0beta1
+Version 2.0beta1 - internally released 2013-11-05
 cmb     adapted for CMSimple_XH 1.6
 cmb     added possibility to suppress checkboxes by leaving pagedata_attribute empty and made that the default (suggested by Jerry)
 cmb     replaced "cmsimple" theme with original themes
 cmb     made system check implicit
 cmb     removed out-dated language files
+cmb     updated English and German manual, and removed others
 cmb     improved performance (especially, for many pages)
 cmb     added CSRF protection
 cmb     removed dependency on Utf8_XH plugin
