fixed bug, where parsing of XML failed on IE11 (reported by Holger)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 2.0beta2 - internally released 2013-11-15
+cmb     fixed bug, where parsing of XML failed on IE11 (reported by Holger)
+
 Version 2.0beta1 - internally released 2013-11-05
 cmb     adapted for CMSimple_XH 1.6
 cmb     added possibility to suppress checkboxes by leaving pagedata_attribute empty and made that the default (suggested by Jerry)
