switched to PHP_CI 2

--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
 * irregular page structure doesn't stop user from fiddling around (okay, he can't save, but...)
-* switch to PHP_CI 2
 * submit without jQuery
-* help icon to the left? (insp. by manu)
+* switch to phing coverage
