--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 2.0.2 - released 2014-03-22
+* fixed bug, where debug statements could cause browsers to fail reporting
+  (un)successful saving
+
 Version 2.0.1 - released 2014-01-28
 * fixed bug, where most HTML entities in page headings broke loading of the page
   structure (reported by bca)
