--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 2.0.5 - released 2015-01-10
+* fixed bug, where page data field "last_edit" was not set for newly created
+  pages (reported by Hartmut)
+* fitted better to CMSimple_XH 1.6+
+
 Version 2.0.4 - released 2014-12-02
 * fixed bug, where saving purged content.htm under PHP 4 (reported by marcus)
 * added Dutch localization (contributed by bastingse)
