--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 3.0dev1 - released 2015-05-08
+* lifted requirements to PHP 5.3.0 and CMSimple_XH 1.7
+* fixed broken save functionality for CMSimple_XH 1.7
+
 Version 2.0.5 - released 2015-01-10
 * fixed bug, where page data field "last_edit" was not set for newly created
   pages (reported by Hartmut)
