--- a/README
+++ b/README
@@ -17,6 +17,7 @@ along with this program (see LICENSE).
 For further information see help/help.htm.
 
 Christoph M. Becker
-Präsident-Mohr-Straße 21
-55218 Ingelheim
+Rheinstraße 147
+55424 Münster-Sarmsheim
+GERMANY
 mailto:cmbecker69@gmx.de
