--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 2.0.6 - released 2017-02-28
+see <https://github.com/cmb69/pagemanager_xh/milestone/2?closed=1>
+
 Version 2.0.5 - released 2015-01-10
 * fixed bug, where page data field "last_edit" was not set for newly created
   pages (reported by Hartmut)
