--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 3.0beta1 – released 2017-03-22
+see <https://github.com/cmb69/pagemanager_xh/milestone/1?closed=1>
+
 Version 2.0.6 - released 2017-02-28
 see <https://github.com/cmb69/pagemanager_xh/milestone/2?closed=1>
 
