--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 3.0beta2 – released 2017-04-20
+see <https://github.com/cmb69/pagemanager_xh/milestone/3?closed=1>
+
 Version 3.0beta1 – released 2017-03-22
 see <https://github.com/cmb69/pagemanager_xh/milestone/1?closed=1>
 
