--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 3.0rc1 – released 2017-05-30
+see <https://github.com/cmb69/pagemanager_xh/milestone/5?closed=1>
+
 Version 3.0beta3 – released 2017-04-23
 see <https://github.com/cmb69/pagemanager_xh/milestone/4?closed=1>
 
