--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 3.1 – released 2017-10-14
+see <https://github.com/cmb69/pagemanager_xh/milestone/7?closed=1>
+
 Version 3.0 – released 2017-06-27
 see <https://github.com/cmb69/pagemanager_xh/milestone/6?closed=1>
 
